feat: improve theme management and enhance note row functionality with icon buttons and context menus